--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,7 +14,7 @@
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            Code --- Name
+            201710255 --- Adrian
         </div>
         <br/>
     </div>
