--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -5,8 +5,10 @@
     <title>Chat</title>
 </head>
 <body>
-    <imput type='text' name='username'/>
-    <imput type='password' name='password'/>
-    <imput type='button' value='login'/>
+    <form method='post' action='/authenticate'>
+     <imput type='text' name='username'/>
+     <imput type='password' name='password'/>
+     <imput type='submit' value='login'/>
+    </form>
 </body>
 </hmtl>
