--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Chat</title>
+    <title>Inicio</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <script src="/static/js/libs/bootstrap.min.js" ></script>
 
@@ -10,12 +10,13 @@
 <body>
     <div align="center" width="80%">
         <div class="alert alert-primary" role="alert">
-          CS2B01 - Plataform-Based Development
+        CS2B01 - Plataform-Based Development
         </div>
         <img src="/static/images/cs.png"/>
         <div class="alert alert-primary" role="alert">
-            201710255 --- Adrian
+            201710255 --- Adrian Boza
         </div>
+        <a href="/static/login.html">Login</a>
         <br/>
     </div>
 </body>
