--- a/web/templates/registro.html
+++ b/web/templates/registro.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/static/css/stylelogin.css">
-    <title>Login</title>
+    <title>Registro</title>
 </head>
 <body>
     <div class='log-box'>
         <img class='log-img' src='/static/img/user.png'>
-        <h class='log-text'>Entrar</h><br><br/>
+        <h class='log-text'>Registro</h><br><br/>
         <form method='post' action='/authenticate'>
             <input  name="username" type="text"  placeholder="Usuario" /><br><br/>
             <input  name="password" type="password" placeholder="Contraseña" /><br><br/>
-            <input  type="submit" value="Login" />
-            <a href="/static/registro.html">¿Aún no tienes una cuenta? Regístrate</a>
+            <input  name="email"    type="email"  placeholder="Correo" /><br><br/>
+            <input  type="submit" value="Registrar" />
+            <a href="https://www.google.com/"></a>
         </form>
     </div>
 </body>
