--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -13,7 +13,7 @@
             <input  name="username" type="text"  placeholder="Usuario" /><br><br/>
             <input  name="password" type="password" placeholder="Contraseña" /><br><br/>
             <input  type="submit" value="Login" />
-            <a href="/static/registro.html">¿Aún no tienes una cuenta? Regístrate</a>
+            <a href="/static/Users.html">¿Aún no tienes una cuenta? Regístrate</a>
         </form>
     </div>
 </body>
