--- a/web/templates/chat.html
+++ b/web/templates/chat.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="static/css/stylechat.css">
+    <script src="/static/js/libs/jquery.js" ></script>
+    <link rel="stylesheet" href="/static/css/libs/bootstrap.min.css">
+    <script src="/static/js/libs/bootstrap.js" ></script>
+    <script src="/static/js/chat.js" ></script>
     <title>Chat</title>
 </head>
 <body>
+    <a href="/logout">Logout</a>
     <div id='chat-container'>
         <div id='search-container'>
             <input type='text' placeholder='Search'/>
