--- a/web/templates/chat2.html
+++ b/web/templates/chat2.html
@@ -11,5 +11,5 @@
 <body>
    HOLA SOY UN HTML SIMPLE
    <button type="button" class="btn btn-primary">Primary</button>
-</body>
+</body>t2.html
 </html>
