--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -6,14 +6,14 @@
     <title>Login</title>
 </head>
 <body>
-    <div class='log-box'>
+    <div class='log-in'>
         <img class='log-img' src='/static/img/user.png'>
         <h class='log-text'>Entrar</h><br><br/>
         <form method='post' action='/authenticate'>
             <input  name="username" type="text"  placeholder="Usuario" /><br><br/>
             <input  name="password" type="password" placeholder="Contraseña" /><br><br/>
             <input  type="submit" value="Login" />
-            <a href="/static/registro.html">¿Aún no tienes una cuenta? Regístrate</a>
+            <a href="/static/createuser.html">¿Aún no tienes una cuenta? Regístrate</a>
         </form>
     </div>
 </body>
